--- a/ProjectXwebAPI/ProjectXwebAPI/ProjectXwebAPI.csproj
+++ b/ProjectXwebAPI/ProjectXwebAPI/ProjectXwebAPI.csproj
@@ -159,7 +159,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -194,7 +193,12 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\AuthorsController.cs" />
+    <Compile Include="Controllers\ChaptersController.cs" />
+    <Compile Include="Controllers\GenresController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ReviewsController.cs" />
+    <Compile Include="Controllers\StoriesController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -233,6 +237,12 @@
       <DependentUpon>ModelProjectX.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AuthorVM.cs" />
+    <Compile Include="ViewModels\ChapterStoryVM.cs" />
+    <Compile Include="ViewModels\ChapterVM.cs" />
+    <Compile Include="ViewModels\GenreVM.cs" />
+    <Compile Include="ViewModels\StorySearchVM.cs" />
+    <Compile Include="ViewModels\StoryVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
