--- a/ProjectXwebAPI/ProjectXwebAPI/ProjectXwebAPI.csproj
+++ b/ProjectXwebAPI/ProjectXwebAPI/ProjectXwebAPI.csproj
@@ -167,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\images\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -246,6 +247,7 @@
       <DependentUpon>ModelProjectX.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\SlugUtil.cs" />
     <Compile Include="ViewModels\AuthorVM.cs" />
     <Compile Include="ViewModels\ChapterStoryVM.cs" />
     <Compile Include="ViewModels\ChapterVM.cs" />
