--- a/ProjectXwebAPI/ProjectXwebAPI/bin/ProjectXwebAPI.dll.config
+++ b/ProjectXwebAPI/ProjectXwebAPI/bin/ProjectXwebAPI.dll.config
@@ -75,6 +75,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ProjectXdatabaseEntities" connectionString="metadata=res://*/Models.ModelProjectX.csdl|res://*/Models.ModelProjectX.ssdl|res://*/Models.ModelProjectX.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HOANGHUNG-PC;initial catalog=ProjectXdatabase;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProjectXdatabaseEntities" connectionString="metadata=res://*/Models.ModelProjectX.csdl|res://*/Models.ModelProjectX.ssdl|res://*/Models.ModelProjectX.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=QUANHOMINH-HP\SQLEXPRESS;initial catalog=ProjectXdatabase;persist security info=True;user id=sa;password=1234567;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
